--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "lib/libtesla"]
-	path = lib/libtesla
-	url = git@github.com:WerWolv/libtesla.git
 [submodule "libs/libtesla"]
 	path = libs/libtesla
-	url = git@github.com:WerWolv/libtesla.git
+	url = git@github.com:diwo/libtesla.git
