Compatibility for libtesla 1.2.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,12 @@
         "codecvt": "cpp",
         "condition_variable": "cpp",
         "iomanip": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "valarray": "cpp",
+        "filesystem": "cpp"
     }
 }
